--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal-sheet": "^3.1.0",
     "react-native": "0.74.1",
     "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "~2.16.1",
